--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,6 @@ classifiers =
 
 
 [options]
-zip_safe = False
+zip_safe = False            # libso files may not be zip_safe
 include_package_data = True
-python_requires  = >3.6
+python_requires  = >3+
